--- a/Kontenplan_Sortierer.html
+++ b/Kontenplan_Sortierer.html
@@ -52,7 +52,7 @@
             justify-content: start;
         }
         .konten-title.selected {
-            border-color: blue;
+            border-color: green;
             background-color: #e0f7fa;
         }
         .feedback {
