--- a/Kontenplan_Sortierer.html
+++ b/Kontenplan_Sortierer.html
@@ -52,7 +52,7 @@
             justify-content: start;
         }
         .konten-title.selected {
-            border-color: green;
+            border-color: yellow;
             background-color: #e0f7fa;
         }
         .feedback {
@@ -69,7 +69,7 @@
             padding: 5px;
             margin-top: 5px;
             font-size: 0.9em;
-            width: 100%;
+            width: 20%;
         }
 
         @media (min-width: 768px) {
