--- a/Kontenplan_Sortierer.html
+++ b/Kontenplan_Sortierer.html
@@ -185,7 +185,7 @@
                     const isCorrect = correctPlan[category]?.[index] === item.textContent.trim();
                     const feedback = document.createElement('span');
                     feedback.classList.add('feedback');
-                    feedback.textContent = isCorrect ? '✅' : '❌';
+                    feedback.textContent = isCorrect ? '♥♪♪' : '❌';
                     feedback.className = `feedback ${isCorrect ? 'correct' : 'incorrect'}`;
                     item.appendChild(feedback);
                 });
